[package]
name = "pact"
version = "0.2.0"
authors = ["The Root Network Team"]
edition = "2021"

[dependencies]
bit_reverse = { version = "0.1.8", default-features = false }
hashbrown =  { version = "0.6.0" }
pest = { version = "2.1.1", optional = true }
pest_derive = {version = "2.1.0", optional = true }

[features]
default = ["std"]
std = ["compiler"]
compiler = [
    "pest",
    "pest_derive",
]
