[package]
name = "trn-pact"
version = "0.2.1"
description = "An embedded contract DSL and toolchain for doughnuts in the TRN permission domain"
license = "Apache-2.0"
authors = ["The Root Network Team"]
edition = "2021"

[dependencies]
bit_reverse = { version = "0.1.8", default-features = false }

[features]
default = ["std"]
std = []
