[package]
 name = "pact-js"
 version = "0.0.3"
 authors = ["The Root Network Team"]
 edition = "2021"
 description = "JS/Wasm bindings for the rust TRN-Pact codec"
 license = "Apache-2.0"
 repository = "https://github.com/futureversecom/trn-trnnut-rs"

 [lib]
 crate-type = ["cdylib"]

 [dependencies]
 trn-pact = { path = "../", default-features = false }
 wasm-bindgen = { version = "0.2.90", features = ["serde-serialize"]  }
 clear_on_drop = { version = "0.2.3", features = ["no_cc"] }
 parity-scale-codec = { version = "3.6.9", features = ["derive"] }
 serde-wasm-bindgen = "0.6.3"
 console_error_panic_hook = "0.1"

 [profile.release]
 # disable loop vectorization for smaller wasm
 opt-level = "z"
 # disable parallel compilation
 codegen-units = 1
 lto = true
